--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
+html{
+  font-size: 18px;
+  background-color: #F7F3F0;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: #F7F3F0;
+  display:flex;
+  flex-direction: column;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  display:flex;
+
+  flex-direction: row;
+  background-color: #F7F3F0;
+  height: 10vh;
+}
+
+.App-footer {
+  background-color: #F7F3F0;
+  height: 10vh;
+}
+
+.left {
+  margin-top: 40px;
+  margin-left :60px;
+  margin-bottom: 40px;
+  position: absolute;
+  left: 0;
+}
+
+.right {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-right:60px;
+  position: absolute;
+  right: 0;
+}
+
+.header-link {
+  text-decoration: none;
+  font-family: 'Gothic A1', sans-serif;
+
+  font-size: .75rem;
+  color: #296852;
+}
+
+.link {
+  text-decoration: none;
+  font-family: 'Gothic A1', sans-serif;
+  color: #296852;
+  font-size: .75rem;
+
+}
+
+.links {
+  text-decoration: none;
+  font-family: 'Gothic A1', sans-serif;
+  font-size: .75rem;
+  color: #296852;
+  margin-left: 10px;
+}
+
+.footer-link {
+  display:flex;
+  flex-direction: row;
+}
+.page {
+  position: relative;
+  display:flex;
   flex-direction: column;
+  background-color: #F7F3F0;
+}
+
+.name {
+  font-family: 'Cormorant Garamond', serif;
+  color: #296852;
+  display:flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 4.5rem;
+  height: 60vh;
 }
 
-.App-link {
-  color: #61dafb;
+.flipped {
+  transform: rotate(180deg);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mountains {
+  width: 100%;
+  margin-bottom: -10px;
+}
+
+.content {
+  background-color: #296852;
+}
+
+.work {
+  display: flex;
+  flex-direction: column  ;
+  text-align: left;
+  margin: 60px;
+}
+
+.work-title{
+  color: #F7F3F0;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 2rem;
+}
+
+.work-wrap {
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.work-image {
+  margin:60px;
+  height: 50vh;
+  width: 50vh;
+}
+
+.work-titles {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  margin: 60px;
+}
+
+.work-category{
+  color:#F7F3F0;
+  font-size: .75rem;
+  font-family: 'Gothic A1', sans-serif;
+}
+
+.work-link {
+  color:#F7F3F0;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 2rem;
+  text-decoration: none;
+
 }
