--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 html{
   font-size: 18px;
   background-color: #F7F3F0;
+  overflow-x: hidden;
+  
 }
 .App {
   text-align: center;
@@ -38,26 +40,54 @@ html{
   right: 0;
 }
 
-.header-link {
+.header-link, .header-link:visited {
   text-decoration: none;
-  font-family: 'Gothic A1', sans-serif;
+  font-family: 'Overpass', sans-serif;
+  height: 4px;
 
-  font-size: .75rem;
-  color: #296852;
+  font-size: .8rem;
+  color: #025337;
+}
+
+.header-link:after, .header-link:visited:after {
+  content: '';
+  margin-top: 20px;
+  height: 4px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("/img/underline.svg");
+  transition: 0.5s;
+}
+.header-link:hover:after, .header-link:visited:hover:after {
+  width: 100%;
+  height:4px;
+}
+
+.header-link[page="home"]:after, .header-link:visited:[page="home"]:after {
+  width: 100%;
+  height:4px;
+}
+
+.header-link.block, .header-link:visited.block {
+  display: block;
 }
 
 .link {
   text-decoration: none;
-  font-family: 'Gothic A1', sans-serif;
+  font-family: 'Overpass', sans-serif;
   color: #296852;
-  font-size: .75rem;
+  font-size: .8rem;
 
 }
 
 .links {
   text-decoration: none;
-  font-family: 'Gothic A1', sans-serif;
-  font-size: .75rem;
+  font-family: 'Overpass', sans-serif;
+  font-size: .8rem;
   color: #296852;
   margin-left: 10px;
 }
@@ -67,7 +97,6 @@ html{
   flex-direction: row;
 }
 .page {
-  position: relative;
   display:flex;
   flex-direction: column;
   background-color: #F7F3F0;
@@ -75,12 +104,12 @@ html{
 
 .name {
   font-family: 'Cormorant Garamond', serif;
-  color: #296852;
+  color:#025337;
   display:flex;
   align-items: center;
   justify-content: center;
   font-size: 4.5rem;
-  height: 60vh;
+  height: 70vh;
 }
 
 .flipped {
@@ -88,36 +117,42 @@ html{
 }
 
 .mountains {
-  width: 100%;
   margin-bottom: -10px;
+  margin-left: -30px;
+  width: 300vw;
+  display:block;
 }
 
 .content {
-  background-color: #296852;
+  background-color: #025337;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .work {
   display: flex;
   flex-direction: column  ;
   text-align: left;
-  margin: 60px;
+  width: 60vw;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .work-title{
   color: #F7F3F0;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 2rem;
+  font-family: 'Overpass', sans-serif;
+  font-size: 1.25rem;
 }
 
 .work-wrap {
   display:flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: left;
 }
 
 .work-image {
-  margin:60px;
   height: 50vh;
   width: 50vh;
 }
@@ -126,13 +161,12 @@ html{
   display: flex;
   flex-direction: column;
   text-align: left;
-  margin: 60px;
 }
 
 .work-category{
   color:#F7F3F0;
   font-size: .75rem;
-  font-family: 'Gothic A1', sans-serif;
+  font-family: 'Overpass', sans-serif;
 }
 
 .work-link {
@@ -141,4 +175,23 @@ html{
   font-size: 2rem;
   text-decoration: none;
 
+}
+
+.bubble {
+  display:inline-block;
+  background-color:transparent;
+  border-radius: 50%; 
+  border: 1.5px solid #025337;
+  width :20px;
+  height: 20px;
+  margin-top: 60px;
+  position: absolute;
+  animation-name: drift;
+  animation-duration: 50s;
+
+}
+
+@keyframes drift {
+  from { transform : translateY(0em); scale: 1; }
+  to   { transform : translateY(-45em); scale: .1; } 
 }
